Separate SwiftKit into SwiftKitCore and SwiftKitFFM (#300)